<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetLesson"
    style="@style/CustomCardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <FrameLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:clipToPadding="false"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="100dp"
            android:layout_height="3dp"
            android:background="@color/mid_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/value_tgl_kehadiran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_day"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/present"
                android:textColor="@color/green_pesantren"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@id/value_tgl_kehadiran"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_jamdatang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/time_present"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/value_tgl_kehadiran" />

            <TextView
                android:id="@+id/tv_jampelajaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/time_lesson"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_jamdatang"
                app:layout_constraintTop_toBottomOf="@+id/value_tgl_kehadiran" />

            <TextView
                android:id="@+id/value_jamabsen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_time_come"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_jamdatang" />

            <TextView
                android:id="@+id/value_jampelajaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_time_go_home"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_jampelajaran"
                app:layout_constraintTop_toBottomOf="@+id/tv_jampelajaran" />

            <TextView
                android:id="@+id/tv_pelajaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/name_lesson"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/value_jamabsen" />

            <TextView
                android:id="@+id/value_pelajaran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/this_lesson"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_pelajaran"
                app:layout_constraintTop_toBottomOf="@id/tv_pelajaran" />

            <TextView
                android:id="@+id/tv_lokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/location"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/value_pelajaran" />

            <TextView
                android:id="@+id/value_lokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_location"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_lokasi" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>